log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: logs-volume-claim
      containers:
        - name: logoutput-generator
          image: tomaspedroso/logoutput-generator
          volumeMounts:
            - name: shared-logs
              mountPath: /shared
        - name: logoutput-webserver
          image: tomaspedroso/logoutput-webserver
          volumeMounts:
            - name: shared-logs
              mountPath: /shared
